[gd_scene load_steps=3 format=3 uid="uid://cj41q6rmfpshf"]

[ext_resource type="PackedScene" uid="uid://cv35tq64lymjw" path="res://Scenes/GameUI/ShopPanel/PersistentShopPanelContainer.tscn" id="1_filkc"]
[ext_resource type="Script" path="res://Scenes/GameUI/ShopPanel/ShopPanel.gd" id="1_i03ah"]

[node name="ShopPanel" type="Panel"]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_i03ah")
money_available = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="OffersContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 176)
layout_mode = 2
size_flags_horizontal = 3

[node name="PersistentShopOfferContainer" parent="MarginContainer/ScrollContainer/OffersContainer" instance=ExtResource("1_filkc")]
layout_mode = 2

[connection signal="child_entered_tree" from="MarginContainer/ScrollContainer/OffersContainer" to="." method="_on_offers_container_child_entered_tree"]
